# story-writer

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  shell.nix
.cursor/rules/: general.mdc
id_derive/: Cargo.toml
id_derive/src/: lib.rs
src/: agent.rs  cli.rs  config.rs  config_test.rs  db.rs  id.rs  lib.rs  main.rs  ollama_client.rs  ollama_client_test.rs  repl.rs  story.rs
tasks/: generate-tasks-codex.md  prd_cli_ai_chat.md  process-task-list-codex.md  tasks-prd_cli_ai_chat.md
tests/: repl_test.rs
