[package]
name = "story-writer"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
ollama-rs = { version = "0.3.1", features = ["stream"] }
tokio = "1.45.1"
rustyline = "16.0.0"
ansi_term = "0.12.1"
tokio-stream = "0.1"
clap = { version = "4.5.40", features = ["derive"] }
uuid = { version = "1.17", features = ["v4"] }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
id_derive = { path = "id_derive" }
rusqlite = { version = "0.36", features = ["bundled"] }
regex = "1.11"
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
